CSS/Content fixes

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -28,7 +28,7 @@
           <h2 class="website-title"><a class="website-link" target="_blank" href="https://overwatch.guide">Overwatch.guide</a></h2>
           <p class="p-1">
             Made in WordPress but using a custom made template, it's a guide for Blizard's videogame, Overwatch. Continuously updated
-            over the last 2 years, it recieves 6000-7000 visits per month according to Google Analytics. Also shows off my (lack thereof) photoshop skills!
+            over the last 2 years, it receives ~5500 unique visitors a month according to Google Analytics. Also shows off my (lack thereof) photoshop skills!
           </p>
           <img class="center" src="assets/OverwatchGuide.jpg" />
         </div>
@@ -36,7 +36,7 @@
           <h2 class="website-title"><a class="website-link" target="_blank" href="https://wordcounttool.com">WordCountTool.com</a></h2>
           <p class="p-1">
             A serverless Angular 6 web application that calculates the number of words in a textarea field, frequency of each word, and
-            can manipulate the case of each word. Uses the @ng-toolkit/universal project to pre-render HTML to improve SEO. Traffic is at about 6000 visitors a month.
+            can manipulate the case of each word. Uses the @ng-toolkit/universal project to pre-render HTML to improve SEO. Traffic is about 34,000 pageviews a month.
           </p>
           <img class="center" src="assets/WordCountTool.jpg" />
         </div>
