--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -21,7 +21,7 @@
   <hr class="my-4">
 
   <div class="py-2 px-5">
-    <h6 class="mb-4" style="">My Personal Projects:</h6>
+    <h6 class="mb-4">My Personal Projects:</h6>
     <div class="container-fluid">
       <div class="row" style="overflow: auto">
         <div class="col-md-6 col-sm-12" style="overflow: inherit;" *ngFor="let project of projects">
@@ -36,7 +36,7 @@
   <hr class="my-4">
 
   <div class="pt-2 pb-3 px-5">
-    <h6 class="mb-4" style="">Other Projects:</h6>
+    <h6 class="mb-4">Other Projects:</h6>
     <div class="container-fluid">
       <div class="row" style="overflow: auto">
         <div class="col-12">
